added batch file insert
